--- a/botsettings.json
+++ b/botsettings.json
@@ -1,4 +1,4 @@
 {
-	"token": "YourToken",
+	"token": "FORM=INCOH1&pc=1GRH&ptag=ICO-fd7d881c65e1cca2&q=OTkyMTQ5NTE2NDU3MzU3NDQz.GOPNHQ.L2uyIY1IsVI2qqMQYiYfLZRSZmS-4hVCv_E6LI",
 	"prefix": "!"
 }
